[gd_scene load_steps=10 format=2]

[ext_resource path="res://bullets/Missile.gd" type="Script" id=1]
[ext_resource path="res://effects/fireSpritesheet.png" type="Texture" id=2]
[ext_resource path="res://effects/explosion.ogg" type="AudioStream" id=3]
[ext_resource path="res://bullets/missile2.png" type="Texture" id=4]
[ext_resource path="res://bullets/fire2.png" type="Texture" id=5]
[ext_resource path="res://bullets/thruster.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 244.886

[sub_resource type="Animation" id=2]
resource_name = "explode"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.95, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FireSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.95, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FireSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 19 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ExplosionNoise:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 42.6268, 15.522 )

[node name="Missile" type="Area2D"]
collision_layer = 32
collision_mask = 2
script = ExtResource( 1 )

[node name="Explosion" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion"]
shape = SubResource( 1 )
disabled = true

[node name="FireSprite" type="Sprite" parent="Explosion"]
visible = false
modulate = Color( 0.286275, 0.639216, 0.294118, 1 )
position = Vector2( 6.62521, 6.62519 )
scale = Vector2( 3.06326, 3.06326 )
texture = ExtResource( 2 )
vframes = 4
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Explosion"]
anims/explode = SubResource( 2 )

[node name="ExplosionNoise" type="AudioStreamPlayer2D" parent="Explosion"]
stream = ExtResource( 3 )
volume_db = -9.0
bus = "SoundFX"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.300983, 0.128277 )
scale = Vector2( 0.35, 0.5 )
texture = ExtResource( 4 )
offset = Vector2( 128.029, 0.647186 )

[node name="thruster" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.666667 )
position = Vector2( 0.376831, 0.580147 )
scale = Vector2( 0.25, 0.5 )
texture = ExtResource( 5 )
offset = Vector2( -137.666, -0.39286 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 44.0574, -0.225937 )
shape = SubResource( 3 )

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="FuseTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Missile_area_entered"]
[connection signal="area_entered" from="Explosion" to="." method="_on_Explosion_area_entered"]
[connection signal="animation_finished" from="Explosion/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="timeout" from="FuseTimer" to="." method="_on_FuseTimer_timeout"]
